--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>My First HTML Page</title>
 </head>
 <body>
-    <h1>This is my code</h1>
+    <h1>this is new version</h1>
     <p>This is a basic paragraph demonstrating text content.</p>
 </body>
 </html>
+
